# dev-netgen

./: README.md  pyproject.toml
LivePlugin IntelliJ/: plugin.kts
devnetgen/: app.py  config.py  entities.py  executors.py  main.py
devnetgen/constructors/: __init__.py  base_constructors.py  base_crud_constructors.py  base_tests_constructors.py  constructor.py  controller_constructor.py  crud_constructors.py
devnetgen/constructors/sources/: controller_constructor.py  crud_constructors.py
devnetgen/constructors/tests/: tests_constructors.py
devnetgen/executors/: __init__.py  crud_executor.py  executor.py  solution_meta.py  sourcegen_executor.py  summaries_executor.py  tests_executor.py
devnetgen/templates/: Controller.cs.j2  CreateCommand.cs.j2  CreateDto.cs.j2  DeleteCommand.cs.j2  DtoTemplate.cs.j2  GetEntitiesQuery.cs.j2  GetEntityGridQuery.cs.j2  GetEntityQuery.cs.j2  LegacyController.cs.j2  UpdateCommand.cs.j2  UpdateDto.cs.j2  Validator.cs.j2  VmTemplate.cs.j2
devnetgen/templates/tests/: CreateTests.cs.j2  TestBase.cs.j2
devnetgen/templates/tests/commands/: CreateEntityTests.cs.j2  DeleteEntityTests.cs.j2  UpdateEntityTests.cs.j2
devnetgen/templates/tests/queries/: GetEntitiesTests.cs.j2  GetEntityGridTests.cs.j2  GetEntityTests.cs.j2
netgen/: app.py  main.py  pluralize.py
netgen/templates/: Controller.cs.j2  CreateCommand.cs.j2  GetEntitiesQuery.cs.j2  Validator.cs.j2
