[tool.poetry]
name = "devnetgen"
version = "0.2.4"
description = ""
authors = ["Александр Окунев <a.okunev@mininform74.ru>"]
readme = "README.md"

[tool.poetry.scripts]
dev-netgen = "devnetgen.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
