[tool.poetry]
name = "devnetgen"
version = "0.2.9.1"
description = ""
authors = ["Александр Окунев <a.okunev@mininform74.ru>"]
readme = "README.md"

[tool.poetry.scripts]
dev-netgen = "devnetgen.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
